# leaps_karel_standalone

./: README.md  pyproject.toml  test.py
karel/: __init__.py  generator.py  karel.py  karel_supervised.py  util.py
karel/dsl/: _parsetab.py  dsl_parse.py  dsl_parse_and_trace.py  dsl_prob.py
karel/tool/: syntax_checker.py
