[tool.poetry]
name = "leaps_karel_standalone"
version = "0.0.0"
description = "A modernized standalone repository of the karel environment as presented in LEAPS"
authors = ["Dweep Trivedi", "Jesse Zhang", "Shao-Hua Sun"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.2"
h5py = "^3.6.0"
progressbar = "^2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
